# grafik

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile.toml  README.md  SECURITY.md  rust-toolchain.toml
.github/workflows/: check.yml
docs/: ARCHITECTURE.md  BUILD.md  INDEX.md  PATTERNS.md  RENDERING.md  REVIEW.md  SCOPE.md  SIMULATION.md  STYLE.md  TESTING.md
docs/decisions/: 0001-simulation-rendering-seam.md  0002-one-product-package.md  0003-complete-renderer-neutral-traces.md  README.md
scripts/: build-browser-artifact.py  check-rust-width.sh  check-whitespace.py  ci-local.sh  test-browser-artifact.py
src/: lib.rs  scene.rs  scene_tests.rs  wasm.rs
tasks/: 0001-prove-seeded-receipt-scenes.md  0002-pin-conformance-snapshots.md  0003-edit-a-functional-board.md  0004-project-time-aware-data.md  0005-connect-flow-checkpoints.md  0006-compose-bounded-effect-racks.md  0007-map-macros-and-variations.md  0008-build-the-functional-board-lab.md  0009-verify-the-pinned-browser-matrix.md  0010-prove-one-real-consumer-boundary.md  0011-prove-the-animated-flow-tracer.md  0012-prove-one-live-kapsel-consumer.md  README.md
web/: index.html  lab.css  lab.html  lab.js  main.js  package.json  scene-adapter.js  style.css  svg-adapter.js
web/fixtures/: kapsel-recorded-success.json
web/tests/: lab.test.mjs  recorded-result.test.mjs  scene-adapter.test.mjs  svg-adapter.test.mjs  tracer.test.mjs
